--- a/data/producteur/biere.yaml
+++ b/data/producteur/biere.yaml
@@ -1,3 +1,4 @@
+nom: "Bière"
 icone: "icon-biere"
 text: >
   "Notre paysan brasseur : 
@@ -6,8 +7,8 @@ certificats :
   - "1-9ZKTfj68uMkul8kNNSp-bzaph_5nFj"
   - "1szyE2wvf_dq1HJI12KvJ1SHX5e_DJSsV"
 modalites :
-  - "1szyE2wvf_dq1HJI12KvJ1SHX5e_DJSsV"
-site :
+  'https://drive.google.com/file/d/1ykBkg3k1htoZuu1wmtcH3LN6J-WluyH3/view?usp=sharing'
+site : www.labasselande.fr
 referent :
   "Corinne Rousseau"
 adresse_ref :
