ajout modalités conserves

--- a/data/producteur/legumes.yaml
+++ b/data/producteur/legumes.yaml
@@ -4,8 +4,8 @@ text: >
   "Notre maraîcher
   Anthony LASFONT   (La Loupe 28)"
 certificats :
-  - "1-9ZKTfj68uMkul8kNNSp-bzaph_5nFj"
-  - "1szyE2wvf_dq1HJI12KvJ1SHX5e_DJSsV"
+  - "https://drive.google.com/file/d/1PaiiRK9ysG1bvwFN3ARfi17eIEGZ0xIB/view?usp=sharing"
+ 
 modalites :
   'https://drive.google.com/file/d/17b18SfBGg-o8VNyWbDm7ZyOh0zeHamqM/view?usp=sharing'
 fiche :
@@ -13,6 +13,6 @@ fiche :
 site :
  
 referent :
-  "Yvette Leriche et Sylvie Gallou"
+  "Sylvie Gallou"
 adresse_ref :
   "amaplegumes28@gmail.com"
