--- a/data/producteur/miel.yaml
+++ b/data/producteur/miel.yaml
@@ -12,6 +12,6 @@ fiche :
 site :
 
 referent :
-  "Corinne Rousseau"
+  "Sylvie GALLOU"
 adresse_ref :
-  "corinne.rousseau28@gmail.com"
+  "amaplegumes28@gmail.com"
