--- a/data/producteur/rhubarbe.yaml
+++ b/data/producteur/rhubarbe.yaml
@@ -13,6 +13,6 @@ fiche :
 site :
 
 referent :
-  "Gwladys Galan"
+  "Aline LE SAUX"
 adresse_ref :
-  "gwladys.galan@free.fr"
+  "aline.le.saux@cegetel.net"
