--- a/data/producteur/chevre.yaml
+++ b/data/producteur/chevre.yaml
@@ -13,6 +13,6 @@ fiche : "16JI701PsZwHLKepWhu-EipRZ-fsRj11C"
 site :
 
 referent :
-  "Yvette LERICHE"
+  "Sylvie GALLOU"
 adresse_ref :
-  "amapcibiche@gmail.com"
+  "amaplegumes28@gmail.com"
