--- a/data/producteur/crepes.yaml
+++ b/data/producteur/crepes.yaml
@@ -14,6 +14,6 @@ fiche :
 site :
 
 referent :
-  "Sylvie GALLOU"
+  "Corinne ROUSSEAU"
 adresse_ref :
-  "amaplegumes28@gmail.com"
+  "corinne.rousseau28@gmail.com"
