--- a/data/producteur/pomme.yaml
+++ b/data/producteur/pomme.yaml
@@ -1,13 +1,12 @@
 nom: "Pommes, jus de pommes et vinaigre"
 icone: "icon-pomme"
 text: >
-  "Notre producteur de pommes, jus de pommes et vinaigre :
-  Alain DUBAR : 37370 St Aubin Le Dépeint"
+  "Notre producteur de pommes, jus de pommes et compote :
+  Richard KLEIN : La Grange d’Assé, 61110 Sablons / Huisnes"
 certificats :
   - "https://drive.google.com/file/d/1_dDqi84c1yMVOYfipk5DOlM5N3SA-49m/view?usp=sharing"
 modalites :
-  ''
-fiche : "1Je11nMIJ1_cj1KkJ46thPv2NjcNb2Z1D"
+  'https://drive.google.com/file/d/1nwXo6jpvjV0bAm52QCDZZC7kR7rD-ozl/view?usp=sharing'
 
 site :
 
