--- a/themes/materialize-bp-hugo-theme/exampleSite/config.toml
+++ b/themes/materialize-bp-hugo-theme/exampleSite/config.toml
@@ -52,6 +52,7 @@ theme="materialize-bp-hugo-theme"
   # js=["/js/test_site.js"]
   # css=["/css/test_site.css"]
   # csscdn=["https://fonts.googleapis.com/css?family=Concert+One|Roboto&display=swap"]
+  Social =""
 
 
 #[languages]
@@ -70,47 +71,6 @@ theme="materialize-bp-hugo-theme"
 # Sets Social Media icons to appear and link to your account. Value should be your
 # username unless otherwise noted.
 # Code from https://themes.gohugo.io/future-imperfect/ theme
-[social]
-  # Coding Communities
-  github           = "spech66"
-  gitlab           = ""
-  stackoverflow    = "" # User Number
-  bitbucket        = ""
-  jsfiddle         = ""
-  codepen          = ""
-  # Visual Art Communities
-  deviantart       = ""
-  flickr           = ""
-  behance          = ""
-  dribbble         = ""
-  # Publishing Communities
-  wordpress        = ""
-  medium           = ""
-  # Professional/Business Oriented Communities
-  linkedin         = "sebastian-pech"
-  linkedin_company = ""
-  foursquare       = ""
-  xing             = "Sebastian_Pech3"
-  slideshare       = ""
-  # Social Networks
-  facebook         = "spechde" # https://fb.me/flowartsde
-  googleplus       = ""
-  reddit           = ""
-  quora            = ""
-  youtube          = "" 
-  vimeo            = ""
-  whatsapp         = "" # WhatsApp Number
-  instagram        = "sebastian_pech"
-  tumblr           = ""
-  twitter          = "spech84"
-  skype            = ""
-  snapchat         = ""
-  pinterest        = ""
-  telegram         = ""
-  discord          = "" # invite link
-  # Email
-  email            = ""
-
 
 [menu]
 
